# Pigale

./: .gitignore  ACTUAL_TEST_RESULTS.md  AUTHORS  CODE_REVIEW_REPORT.md  CORRECT_API_PATTERNS.md  ChangeLog  DEVELOPER_GUIDE.md  Doxyfile  GNUmakefile  LIBRARY_BUGS_TO_REPORT.md  LIBRARY_BUGS_TO_REPORT_CORRECTED.md  LIBRARY_BUGS_VERIFIED.md  Makefile.am  Makefile.in  MkTags  PROP_LABEL_VIN0_COMPREHENSIVE_ANALYSIS.md  README  README.txt  README_OSX.txt  README_WINDOWS.txt  REVIEW_SUMMARY.md  TEST_SUITE_PLAN.md  TGF_BUG_DEEP_ANALYSIS.md  aclocal.m4  config.h.in  configure  configure.in  distfiles.sh  dummy.cpp  gnumakefile  images.html  installation.html  license.html  ltmain.sh  makelist  pigale.html  pigale.inc  pigale.inc.in  pigale.pro  runqmake.sh  (+10 more)
.github/workflows/: build.yml  test.yml
ClientServer/: Client  ClientData.txt  ClientReadMe.txt  ClientServer.pro  Clientdata.txt  GNUmakefile  Makefile.am  Makefile.in  ReadMe.txt  Server  XServer  client.cpp  client.h  client.pro  data1  data2  ex.tgf  gnumakefile  graph.txt  graph0.txt  qmake.pro  server.cpp  server.h  symm.tgf  xserver.cpp  xserver.h  xx
Doc/: bibliography.html  cgi.html  client.html  images.html  index.html  installation.html  main.txt  manual.html  sourceforge.head  style.css
UsingTgraph/: Readme.txt  UsingTgraph.pro  a.txt  ex.pro  ex.vcproj  main.cpp
cgi/: Readme.txt  cgi.pro  client.cpp  main.cpp  moc_client.cpp  pigale.cpp  pigale.pro
freeglut/: freeglut.pro  freeglut_internal.h
freeglut/src/: fg_init.c
freeglut/src/mswin/: fg_spaceball_mswin.c
incl/: Pigale.h  config.h
incl/QT/: Action.h  Action_def.h  GLWindow.h  GraphWidgetPrivate.h  Handler.h  Misc.h  MyCanvas.h  MyPaint.h  MyWindow_doc.h  SymWindow.h  clientEvent.h  graphml.h  graphmlparser.h  grid.h  netcut.h  pigaleCanvas.h  pigalePaint.h  pigaleQcolors.h  pigaleWindow_doc.h  staticData.h
incl/TAXI/: CotreeCritical.h  DFSGraph.h  DFSLow.h  Dos.h  IntList.h  KantShel.h  LedaAlgs.h  LedaConv.h  Malt.h  MaxPath.h  Mconst.h  Mhelpers.h  Mondeca.h  Mprop.h  SchPack.h  SchnyderWood.h  Tbase.h  Tdebug.h  Teditor.h  Tfile.h  Tflist.h  Tgf.h  Tmessage.h  Tpoint.h  Tprop.h  Tpropio.h  Tsmap.h  Tstack.h  Tstring.h  Tsvector.h  Ttimer.h  bicon.h  color.h  elmt.h  embed.h  embedrn.h  graph.h  graphs.h  interface.h  lralgo.h  (+7 more)
qt/: Action.awk  CanvasGrid.cpp  CanvasItem.cpp  CanvasSpring.cpp  ClientSocket.cpp  ClientSocket.h  EmbedCurves.cpp  GNUmakefile  GraphGL.cpp  GraphGL.h  GraphSym.cpp  GraphSym.h  GraphWidget.h  Handler.cpp  LineEditNum.cpp  LineEditNum.h  Macro.cpp  Makefile.am  Makefile.in  MiscQt.cpp  MyCanvas.cpp  MyPaint.cpp  MyWindow.cpp  MyWindow.h  SchaefferGen.cpp  Settings.cpp  Test.cpp  client.cpp  client.h  glcontrolwidget.cpp  glcontrolwidget.h  gnumakefile  gprop.cpp  gprop.h  graphml.cpp  graphmlparser.cpp  main.cpp  mouse_actions.cpp  mouse_actions.h  netcut.cpp  (+17 more)
qt/documentation/: manual.html
qt/icones/: whatsthis.xpm
tests/: .gitignore  API_LESSONS_LEARNED.md  CMakeLists.txt  KNOWN_LIMITATIONS.md  README.md  TEST_SUITE_SUCCESS_REPORT.md  debug_geometric_label.cpp  debug_io.cpp  debug_kuratowski.cpp  debug_kuratowski2.cpp  debug_kuratowski3.cpp  debug_kuratowski_on_planar.cpp  debug_maxplanar.cpp  debug_maxplanar2.cpp  debug_vin0.cpp  debug_vlabel.cpp  gdb_script.txt  generate_coverage.sh  run_tests.sh  tests.pro
tests/fixtures/: README.md
tests/fixtures/graphs/nonplanar/: k33.tgf  k5.tgf
tests/fixtures/graphs/planar/: k4.tgf
tests/fixtures/graphs/special/: empty.tgf  single_edge.tgf  single_vertex.tgf
tests/helpers/: graph_builders.cpp  graph_builders.h  graph_comparators.cpp  graph_comparators.h  property_validators.cpp  property_validators.h
tests/integration/: test_graph_invariants.cpp  test_planar_pipeline.cpp  test_property_persistence.cpp
tests/property/: test_graph_properties.cpp  test_planarity_properties.cpp
tests/unit/algorithms/embedding/: test_embedding.cpp
tests/unit/algorithms/planarity/: test_planarity.cpp
tests/unit/algorithms/traversal/: test_dfs_bfs.cpp
tests/unit/core/: test_geometric_graph.cpp  test_graph.cpp  test_graph_container.cpp  test_topological_graph.cpp
tests/unit/data_structures/: test_circular_order.cpp  test_pset.cpp
tests/unit/generation/: test_generate.cpp
tests/unit/io/: test_tgf.cpp
tgf/: a.tgf  a.txt  c.tgf  cylinder.tgf  d.tgf  graph.txt  sym.graphml
tgraph/: 3-ConOrientTriang.cpp  3-ConShelling1.cpp  3-ConShelling2.cpp  BFS.cpp  Barycenter.cpp  Biconnect.cpp  BipPlanarize.cpp  Bipolar.cpp  CotreeCritical.cpp  DFS.cpp  DFSGraph.cpp  DFSMap.cpp  Debug.cpp  Diagonalise.cpp  Embed2Pages.cpp  EmbedCCD.cpp  EmbedFPP.cpp  EmbedPolrec.cpp  EmbedPolyline.cpp  EmbedTutteCircle.cpp  EmbedVision.cpp  FastTwit.cpp  File.cpp  GNUmakefile  Generate.cpp  GeoAlgs.cpp  Graph.cpp  LR-Algo.cpp  LR-Map.cpp  Make.lst  Makefile  Makefile.am  Makefile.in  MaxPlanar.cpp  NewPolar.cpp  NpBiconnect.cpp  Planar.cpp  PropName.cpp  PropTgf.cpp  STList.cpp  (+19 more)
