AUTOMAKE_OPTIONS = foreign
SUBDIRS = tgraph qt ClientServer
EXTRA_DIST=Doc/icones/*.png Doc/icones/*.gif Doc/*.html Doc/*.css tgf/*.tgf tgf/*.txt tgf/*.graphml incl/*.h incl/TAXI/*.h incl/QT/*.h qt/icones qt/*.h qt/*.cpp qt/Action.awk qt/pigale.pro qt/gnumakefile qt/pigale_fr.ts qt/pigale_fr.qm gnumakefile ClientServer/*.h ClientServer/*.cpp ClientServer/gnumakefile ClientServer/client.pro ClientServer/Clientdata.txt gnumakefile runqmake.sh Doxyfile tgraph/*.cpp tgraph/tgraph.pro  tgraph/*.awk tgraph/gnumakefile macro/maxPlanar4Connex.mc
datadir = $(prefix)
nobase_data_DATA = $(wildcard Doc/icones/*) $(wildcard Doc/*.*) $(wildcard tgf/*.*) macro/maxPlanar4Connex.mc
