dnl Process this file with autoconf to produce a configure script.
AC_INIT(pigale,1.3.11,[hf@sourceforge.net],Public Implementation of a Graph Library and Editor)
dnl CURRENT:REVISION:AGE
LIB_VERSION=1.3.3
AC_SUBST(LIB_VERSION)
AC_PREFIX_DEFAULT(/usr/local/pigale-$PACKAGE_VERSION) 
if test "$prefix" != NONE; then
	PPATH="$prefix"
else
	PPATH="/usr/local/pigale-$PACKAGE_VERSION"
fi
AC_DEFINE_UNQUOTED(PACKAGE_PATH,"$PPATH",Path to Pigale root directory)
AC_SUBST(PPATH)
AC_SUBST(enable_static)

dnl Checks target processor
AC_CANONICAL_SYSTEM
CPU=
case "$target_cpu" in
      i686) CPU="-march=i686";;
      i586) CPU="-march=i586";;
      i486) CPU="-march=i486";;
      i386) CPU="-march=i386";;
esac
AC_SUBST(CPU)

AM_INIT_AUTOMAKE(pigale,$PACKAGE_VERSION)
AC_CONFIG_HEADER(incl/config.h:config.h.in)
AH_TOP([
#ifndef _CONFIG_H
#define _CONFIG_H
])
AH_BOTTOM([#endif])

AC_ENABLE_STATIC
AC_DISABLE_SHARED
AC_PROG_LIBTOOL

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CXX
AC_LANG_CPLUSPLUS
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl Checks for headers
AC_HEADER_STDC
AC_CHECK_HEADERS([GL/gl.h GL/glu.h GL/glx.h unistd.h fcntl.h limits.h sys/ioctl.h sys/param.h sys/time.h])
AC_HEADER_TIME

AC_MSG_CHECKING([for QT4])

AC_ARG_WITH(qt4,
    [  --with-qt4=DIR           where QT4 is installed. ],
    [  QT_PATH="$withval"],[
QT_PATH=$QT4DIR:/usr/local/Trolltech/Qt-4.5.0:/usr/local/Trolltech/Qt-4.4.2:/usr/local/Trolltech/Qt-4.4.1:/usr/local/Trolltech/Qt-4.4.0:/usr/local/Trolltech/Qt-4.3.3:/usr/local/Trolltech/Qt-4.3.2:/usr/share/qt4
])
AC_PATH_PROG(QT4,[bin/qmake],,[$QT_PATH/bin])
if test "x$QT4" = x; then
  AC_MSG_ERROR(qt4: qmake not found)
else
 QT4DIR=${QT4/\/bin\/qmake/}
  QT_INCLUDES="-I$QT4DIR/include -I$QT4DIR/include/Qt" 
fi
AC_SUBST(QT4DIR)
echo $QT4DIR > qt4dir

AC_ARG_ENABLE(debug,
[  --enable-debug          enable full pigale debugging [default=off]],
  enable_debug=$enableval, enable_debug=no)
if test "x$enable_debug" = xyes; then
	DEBUG=debug
else
	DEBUG=release
fi
AC_SUBST(DEBUG)

AC_ARG_ENABLE(ubuntu,
[  --enable-ubuntu         pigale will use the installed qt4 package [default=off]],
  enable_ubuntu=$enableval, enable_ubuntu=no)
if test "x$enable_ubuntu" = xyes; then
	SYSTEM=ubuntu
else
	SYSTEM=xxxx
fi
AC_SUBST(SYSTEM)
echo $SYSTEM > system
AC_PATH_XTRA
LDFLAGS="${LDFLAGS} ${X_LIBS} ${X_EXTRA_LIBS}"


# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_VPRINTF

echo "############### RESULTS: ######################"
echo system=$SYSTEM
echo qmake=$QT4
echo QT4DIR=$QT4DIR
echo install:$PPATH
echo cpu:$host_cpu
echo static:$enable_static
AC_PROG_INSTALL
AC_CONFIG_FILES([ pigale.inc ])
AC_OUTPUT(
Makefile
)
./runqmake.sh

